fixed spacing issues in #name and #intro

--- a/style.css
+++ b/style.css
@@ -124,6 +124,10 @@ section {
   position: relative;
 }
 
+#name h1 {
+  text-align: center;
+}
+
 .blob {
   height: 80px;
   width: 80px;
